[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtfparse"
version = "2.5.1"
requires-python = ">=3.7"
authors = [ {name="Alex Rubinsteyn", email="alex.rubinsteyn@unc.edu"} ]
description = "Parsing library for extracting data frames of genomic features from GTF files"
readme = "README.md"
license = {text = "Apache Software License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "polars>=0.20.2",
    "pyarrow>=18.0.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "pylint",
    "coveralls",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/openvax/gtfparse"
"Bug Tracker" = "https://github.com/openvax/gtfparse"

[tool.setuptools.packages.find]
where = ["."]
include = ["gtfparse*"]
